learning rate decay. cannot run on pc so using codespace

--- a/makemore/mlp.ipynb
+++ b/makemore/mlp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "id": "bb6151f8-7b27-47bd-81df-056c78d5ea46",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "'2.1.1+cu121'"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
    "id": "86c5ded7-d1bb-4d76-9f3f-050f4676b2c5",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "names:  ['eliette', 'aryan', 'raeley', 'torrey', 'kaylon']\n",
+      "names:  ['tyrie', 'kesia', 'lainey', 'avyana', 'mylan']\n",
       "number of names:  32033\n",
       "(list of chars, count):  ('.abcdefghijklmnopqrstuvwxyz', 27)\n",
       "(max word length, min word length):  (15, 1)\n"
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "id": "ece9b2e4-7d31-4397-b570-f01f02c3e367",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
        "(torch.Size([228146, 3]), torch.Size([228146]), torch.int64, torch.int64)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 4,
    "id": "40df7547-351a-400c-81a8-7b5d5da68526",
    "metadata": {},
    "outputs": [
@@ -118,32 +118,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "... => e\n",
-      "..e => l\n",
-      ".el => i\n",
-      "eli => e\n",
-      "lie => t\n"
+      "... => t\n",
+      "..t => y\n",
+      ".ty => r\n",
+      "tyr => i\n",
+      "yri => e\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "((torch.Size([22829, 3]), torch.Size([22829])),\n",
-       " (torch.Size([182430, 3]), torch.Size([182430])),\n",
-       " (torch.Size([22887, 3]), torch.Size([22887])))"
+       "((torch.Size([22802, 3]), torch.Size([22802])),\n",
+       " (torch.Size([182481, 3]), torch.Size([182481])),\n",
+       " (torch.Size([22863, 3]), torch.Size([22863])))"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# build_dset basically builds a rolling window on the dataset based on the context length.\n",
-    "def build_dset(dset):\n",
+    "def build_dset(dset, ctxt_len):\n",
     "    X, Y = [], []\n",
     "    for name in dset:\n",
-    "        context  = [0] * block_size\n",
+    "        context  = [0] * ctxt_len\n",
     "        for ch in name:\n",
     "            ix = atoi[ch]\n",
     "            X.append(context)\n",
@@ -157,9 +157,9 @@
     "n1 = int(0.1*len(words))\n",
     "n2 = int(0.9*len(words))\n",
     "\n",
-    "X_train, Y_train = build_dset(names[:n1])\n",
-    "X_val, Y_val = build_dset(names[n1:n2])\n",
-    "X_test, Y_test = build_dset(names[n2:])\n",
+    "X_train, Y_train = build_dset(names[:n1], block_size)\n",
+    "X_val, Y_val = build_dset(names[n1:n2], block_size)\n",
+    "X_test, Y_test = build_dset(names[n2:], block_size)\n",
     "\n",
     "for c, d in zip(X_train[:5], Y_train[:5]):\n",
     "    print(''.join(itoa[i.item()] for i in c), \"=>\", itoa[d.item()])\n",
@@ -169,19 +169,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "id": "36a4d92f-067a-4a56-a452-63c8171c6df8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[89], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m g \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mGenerator()\u001b[38;5;241m.\u001b[39mmanual_seed(\u001b[38;5;241m2147483647\u001b[39m) \u001b[38;5;66;03m# for reproducibility\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# squeezing it into a 2 dimensional space \u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# since in the paper, a relatively smaller tensor(30 and 60) (to the dataset[17_000]) is used. \u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m C \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandn\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m27\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgenerator\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mg\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m x_enc \u001b[38;5;241m=\u001b[39m F\u001b[38;5;241m.\u001b[39mone_hot(X_train, num_classes\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m27\u001b[39m)\u001b[38;5;241m.\u001b[39mfloat()\n\u001b[1;32m      8\u001b[0m Z \u001b[38;5;241m=\u001b[39m x_enc \u001b[38;5;241m@\u001b[39m C\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The shape of Z(emb):  torch.Size([22877, 3, 2])\n"
      ]
     }
    ],
@@ -204,16 +200,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 6,
    "id": "72b8b03a-4fac-4fe3-914c-91efd25d8eae",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Maybe you meant '==' or ':=' instead of '='? (468710001.py, line 19)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[94], line 19\u001b[0;36m\u001b[0m\n\u001b[0;31m    b2 = torch.randn=(27, generator=g)\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Maybe you meant '==' or ':=' instead of '='?\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of hidden layer:  torch.Size([22877, 100])\n",
+      "Shape of logits:  torch.Size([22877, 27])\n",
+      "Shape of probability space:  torch.Size([22877, 27])\n",
+      "Total number of parameters:  3481\n"
      ]
     }
    ],
@@ -229,14 +227,14 @@
     "\n",
     "# here let's use a 100 dimensional space\n",
     "W1 = torch.randn((6, 100), generator=g)\n",
-    "b1 = torch.randn(27, generator=g)\n",
+    "b1 = torch.randn(100, generator=g)\n",
     " \n",
     "h = torch.tanh(Z_shaped @ W1 + b1) #hidden layer\n",
     "\n",
     "print(\"Shape of hidden layer: \", h.shape)\n",
     "\n",
     "W2 = torch.randn((100, 27), generator=g)\n",
-    "b2 = torch.randn=(27, generator=g)\n",
+    "b2 = torch.randn(27, generator=g)\n",
     "\n",
     "logits = h @ W2 + b2 # log-counts\n",
     "print(\"Shape of logits: \", logits.shape)\n",
@@ -254,60 +252,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 7,
    "id": "4b9aef35-5913-44bf-94a4-8044d21029f1",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'probs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[84], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# negative mean log likelihood (cross entropy loss)\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m loss \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[43mprobs\u001b[49m[torch\u001b[38;5;241m.\u001b[39marange(), Y_train]\u001b[38;5;241m.\u001b[39mlog()\u001b[38;5;241m.\u001b[39mmean()\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# another way\u001b[39;00m\n\u001b[1;32m      5\u001b[0m loss2 \u001b[38;5;241m=\u001b[39m F\u001b[38;5;241m.\u001b[39mcross_entropy(logits, Y_train)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'probs' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss=19.509521484375 loss2=19.509521484375\n"
      ]
     }
    ],
    "source": [
     "# negative mean log likelihood (cross entropy loss)\n",
-    "loss = -probs[torch.arange(), Y_train].log().mean()\n",
+    "# print(probs.shape[0], Y_train.shape[0])\n",
+    "loss = -probs[torch.arange(probs.shape[0]), Y_train].log().mean()\n",
     "\n",
     "# this is a better way to implement the above\n",
     "loss2 = F.cross_entropy(logits, Y_train)\n",
     "\n",
-    "assert torch.equal(loss, loss2)"
+    "print(f\"loss={loss} loss2={loss2}\")\n",
+    "# assert torch.equal(loss, loss2), "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5f16087e-6737-408b-ad7a-5f6e0b7a990a",
+   "execution_count": 7,
+   "id": "a7c07e7e-f847-4a4e-af0f-b26e3bfd2c32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.float32\n"
+     ]
+    }
+   ],
+   "source": [
+    "# REDOING IT AGAIN MORE CLEARELY\n",
+    "# hyper-params\n",
+    "embedding_size = 10\n",
+    "block_size  = 3 # context length\n",
+    "mid_w_size = 200 # intermediate weight size\n",
+    "lre = torch.linspace(-3, 1, 100)\n",
+    "lrs = 10**lre # a range of learning rate\n",
+    "print(lrs.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "dfaaecda-e11f-4d00-82fe-2673964b94a1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for p in params:\n",
-    "    p.requires_grad = True # autograd should record operations\n",
-    "\n",
     "# BACKPROPAGATION\n",
     "\n",
     "\n",
-    "# minibatch construct\n",
-    "# forward pass\n",
-    "# backward pass\n",
-    "# update\n"
+    "# train-test split(80, 10, 10)\n",
+    "n1 = int(0.8*len(words))\n",
+    "n2 = int(0.9*len(words))\n",
+    "\n",
+    "X_train, Y_train = build_dset(names[:n1], block_size)\n",
+    "X_val, Y_val = build_dset(names[n1:n2], block_size)\n",
+    "X_test, Y_test = build_dset(names[n2:], block_size)\n",
+    "\n",
+    "g = torch.Generator().manual_seed(2147483647) # for reproducibility\n",
+    "C = torch.randn((27, embedding_size), generator=g)\n",
+    "W1 = torch.randn((block_size * embedding_size, mid_w_size), generator=g)\n",
+    "b1 = torch.randn(mid_w_size, generator=g)\n",
+    "W2 = torch.randn((mid_w_size, 27), generator=g)\n",
+    "b2 = torch.randn(27, generator=g)\n",
+    "\n",
+    "params = [C, W1, b1, W2, b2]\n",
+    "\n",
+    "for p in params:\n",
+    "    p.requires_grad = True # autograd should record operations\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8df6ead9-450f-4543-8043-37cc00c232ba",
+   "execution_count": 1,
+   "id": "6b4c5bfa-446d-4ada-af67-db9636a93563",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'C' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 13\u001b[0m\n\u001b[1;32m      9\u001b[0m loss_i \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(count):\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;66;03m# forward pass\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m     emb \u001b[38;5;241m=\u001b[39m \u001b[43mC\u001b[49m[X_train]\u001b[38;5;241m.\u001b[39mview(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m30\u001b[39m)\n\u001b[1;32m     14\u001b[0m     h \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtanh(emb\u001b[38;5;241m.\u001b[39mview(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, block_size \u001b[38;5;241m*\u001b[39m embedding_size) \u001b[38;5;241m@\u001b[39m W1 \u001b[38;5;241m+\u001b[39m b1) \u001b[38;5;66;03m# intermediate layer\u001b[39;00m\n\u001b[1;32m     15\u001b[0m     logits \u001b[38;5;241m=\u001b[39m h \u001b[38;5;241m@\u001b[39m W2 \u001b[38;5;241m+\u001b[39m b2\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'C' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# sampling from model\n",
-    "g = torch.Generator().manual_seed(2147483647)"
+    "# BACKPROPAGATION\n",
+    "# minibatch construct\n",
+    "# ix = torch.randint(0, X_train.shape[0], (32,))\n",
+    "\n",
+    "# print(emb.shape, C[X_train].shape)  \n",
+    "count = 100\n",
+    "step_i = []\n",
+    "lr_i = []\n",
+    "loss_i = []\n",
+    "\n",
+    "for i in range(count):\n",
+    "    # forward pass\n",
+    "    emb = C[X_train].view(-1, 30)\n",
+    "    h = torch.tanh(emb.view(-1, block_size * embedding_size) @ W1 + b1) # intermediate layer\n",
+    "    logits = h @ W2 + b2\n",
+    "        \n",
+    "    loss = F.cross_entropy(logits, Y_train)\n",
+    "    print(\"(\", i ,\"/\", count, \") loss = \", loss.item())\n",
+    "    \n",
+    "    # backward pass\n",
+    "    for p in params:\n",
+    "        p.grad = None\n",
+    "    loss.backward()\n",
+    "\n",
+    "    # update\n",
+    "    for p in params:\n",
+    "        p.data += - lrs[i] * p.grad \n",
+    "\n",
+    "    # track stats\n",
+    "    lr_i.append(lrs[i])\n",
+    "    step_i.append(i)\n",
+    "    loss_i.append(loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6ad1e784-b426-4518-ad31-e31536d948b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mplt\u001b[49m\u001b[38;5;241m.\u001b[39mplot(step_i, lr_i)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'plt' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "plt.plot(step_i, lr_i)"
    ]
   }
  ],
