--- a/makemore/bigram.ipynb
+++ b/makemore/bigram.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "names:  ['zylah', 'lonnie', 'damari', 'adiyah', 'myasia']\n",
+      "names:  ['reeves', 'harbour', 'verity', 'brettley', 'pinchas']\n",
       "number of names:  32033\n",
       "(list of chars, count):  ('.abcdefghijklmnopqrstuvwxyz', 27)\n",
       "(max word length, min word length):  (15, 1)\n"
@@ -37,7 +37,7 @@
     "\tf.write(joined)\n",
     "min_chars = 1\n",
     "max_chars = max(len(v) for v in names)\n",
-    "chars = sorted(list(set(\"\".join(names))))\n",
+    "chars = sorted(['.'] + list(set(\"\".join(names))))\n",
     "\n",
     "# in replacement of the start and end token. Every name should start and end with a period\n",
     "chars_count = len(chars)\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
      "output_type": "stream",
      "text": [
       "max bigram occurance:  (('n', '.'), 6763)\n",
-      "min bigram occurance:  (('x', 'h'), 1)\n"
+      "min bigram occurance:  (('g', 'f'), 1)\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
        "tensor(1.6243, dtype=torch.float64)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -351,14 +351,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nnl of the entire dataset is 2.460574555642785\n"
+      "nnl of the entire dataset is 2.460574555642786\n"
      ]
     }
    ],
@@ -384,17 +384,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([26, 25, 12,  ...,  7,  8,  0]),\n",
-       " tensor([ 0, 26, 25,  ...,  9,  7,  8]))"
+       "(tensor([18,  5,  5,  ...,  5,  5,  0]),\n",
+       " tensor([ 0, 18,  5,  ..., 18,  5,  5]))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
        "torch.Size([228146, 27])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,23 +460,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "for ., the answer is z, with prob: 0.146\n",
-      "for z, the answer is y, with prob: 0.018\n",
-      "for y, the answer is l, with prob: 0.014\n",
-      "for l, the answer is a, with prob: 0.017\n",
-      "for a, the answer is h, with prob: 0.013\n",
-      "for h, the answer is ., with prob: 0.049\n",
-      "for ., the answer is l, with prob: 0.009\n",
-      "for l, the answer is o, with prob: 0.029\n",
-      "for o, the answer is n, with prob: 0.020\n",
-      "for n, the answer is n, with prob: 0.024\n"
+      "for ., the answer is r, with prob: 0.025\n",
+      "for r, the answer is e, with prob: 0.029\n",
+      "for e, the answer is e, with prob: 0.029\n",
+      "for e, the answer is v, with prob: 0.050\n",
+      "for v, the answer is e, with prob: 0.005\n",
+      "for e, the answer is s, with prob: 0.021\n",
+      "for s, the answer is ., with prob: 0.010\n",
+      "for ., the answer is h, with prob: 0.014\n",
+      "for h, the answer is a, with prob: 0.020\n",
+      "for a, the answer is r, with prob: 0.090\n"
      ]
     }
    ],
@@ -492,14 +492,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nnl of the entire dataset is 2.474761962890625\n"
+      "nnl of the entire dataset is 3.758953332901001\n"
      ]
     }
    ],
@@ -510,35 +510,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.7686190605163574\n",
+      "3.768618583679199\n",
       "3.378804922103882\n",
-      "3.1610894203186035\n",
-      "3.0271859169006348\n",
+      "3.1610896587371826\n",
+      "3.027186155319214\n",
       "2.9344847202301025\n",
-      "2.867231607437134\n",
+      "2.867231845855713\n",
       "2.816654920578003\n",
-      "2.777146816253662\n",
+      "2.777147054672241\n",
       "2.7452545166015625\n",
-      "2.7188305854797363\n",
-      "2.6965057849884033\n",
-      "2.6773722171783447\n",
-      "2.6608054637908936\n",
+      "2.7188310623168945\n",
+      "2.696505546569824\n",
+      "2.677372694015503\n",
+      "2.6608052253723145\n",
       "2.6463515758514404\n",
-      "2.633664846420288\n",
-      "2.622471332550049\n",
+      "2.633665084838867\n",
+      "2.622471570968628\n",
       "2.6125476360321045\n",
       "2.6037065982818604\n",
       "2.595794439315796\n",
-      "2.5886807441711426\n",
+      "2.5886809825897217\n",
       "2.5822560787200928\n",
-      "2.5764291286468506\n",
+      "2.576429843902588\n",
       "2.5711233615875244\n",
       "2.566272735595703\n",
       "2.5618226528167725\n",
@@ -550,60 +550,60 @@
       "2.5413522720336914\n",
       "2.538721799850464\n",
       "2.536262035369873\n",
-      "2.5339581966400146\n",
+      "2.5339579582214355\n",
       "2.531797409057617\n",
       "2.529768228530884\n",
       "2.527859926223755\n",
-      "2.5260636806488037\n",
+      "2.526063919067383\n",
       "2.5243709087371826\n",
-      "2.522773027420044\n",
+      "2.522773265838623\n",
       "2.52126407623291\n",
-      "2.519836902618408\n",
-      "2.5184857845306396\n",
-      "2.5172054767608643\n",
-      "2.515990972518921\n",
-      "2.5148375034332275\n",
+      "2.519836664199829\n",
+      "2.5184855461120605\n",
+      "2.5172057151794434\n",
+      "2.5159904956817627\n",
+      "2.5148372650146484\n",
       "2.5137410163879395\n",
-      "2.51269793510437\n",
-      "2.511704444885254\n",
-      "2.5107581615448\n",
-      "2.509854793548584\n",
+      "2.512697696685791\n",
+      "2.511704921722412\n",
+      "2.5107579231262207\n",
+      "2.509854555130005\n",
       "2.5089924335479736\n",
-      "2.5081686973571777\n",
-      "2.507380485534668\n",
-      "2.5066258907318115\n",
-      "2.5059032440185547\n",
+      "2.5081682205200195\n",
+      "2.507380247116089\n",
+      "2.5066256523132324\n",
+      "2.5059030055999756\n",
       "2.5052103996276855\n",
-      "2.5045459270477295\n",
-      "2.503908157348633\n",
-      "2.503295421600342\n",
+      "2.5045461654663086\n",
+      "2.5039076805114746\n",
+      "2.5032951831817627\n",
       "2.5027060508728027\n",
       "2.5021398067474365\n",
-      "2.5015945434570312\n",
+      "2.501594305038452\n",
       "2.5010693073272705\n",
       "2.500563383102417\n",
       "2.500075340270996\n",
-      "2.4996049404144287\n",
-      "2.499150514602661\n",
+      "2.4996044635772705\n",
+      "2.4991507530212402\n",
       "2.4987120628356934\n",
-      "2.49828839302063\n",
+      "2.498288154602051\n",
       "2.4978790283203125\n",
-      "2.4974827766418457\n",
-      "2.4970998764038086\n",
-      "2.4967293739318848\n",
-      "2.4963700771331787\n",
-      "2.4960227012634277\n",
-      "2.4956860542297363\n",
+      "2.497483015060425\n",
+      "2.4970996379852295\n",
+      "2.4967291355133057\n",
+      "2.496370315551758\n",
+      "2.496022939682007\n",
+      "2.4956862926483154\n",
       "2.4953596591949463\n",
-      "2.4950428009033203\n",
+      "2.4950432777404785\n",
       "2.4947361946105957\n",
       "2.494438648223877\n",
-      "2.4941492080688477\n",
+      "2.494149684906006\n",
       "2.4938690662384033\n",
-      "2.4935965538024902\n",
+      "2.4935967922210693\n",
       "2.4933321475982666\n",
-      "2.493074893951416\n",
-      "2.4928252696990967\n",
+      "2.493075132369995\n",
+      "2.492825508117676\n",
       "2.4925825595855713\n",
       "2.4923462867736816\n",
       "2.492116689682007\n",
@@ -612,12 +612,12 @@
       "2.491464376449585\n",
       "2.491258382797241\n",
       "2.491058111190796\n",
-      "2.4908626079559326\n",
+      "2.4908628463745117\n",
       "2.4906723499298096\n",
       "2.4904870986938477\n",
-      "2.4903066158294678\n",
-      "2.490130662918091\n",
-      "2.4899590015411377\n"
+      "2.4903063774108887\n",
+      "2.4901301860809326\n",
+      "2.4899587631225586\n"
      ]
     }
    ],
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,8 @@
       "+ valid word:  jaran\n",
       "+ valid word:  kanan\n",
       "+ valid word:  manan\n",
-      "+ valid word:  kahan\n"
+      "+ valid word:  kahan\n",
+      "+ valid word:  jarin\n"
      ]
     }
    ],
@@ -742,6 +743,19 @@
     "        generated_names.append(word) \n",
     "    if len(generated_names) == 10:\n",
     "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xenc = F.one_hot(torch.tensor([ix]), num_classes=27).float()\n",
+    "logits = xenc @ W # predict log-counts\n",
+    "counts = logits.exp() # counts, equivalent to N\n",
+    "p = counts / counts.sum(1, keepdims=True) # probabilities for next character\n",
+    "plt.scatter()\n"
    ]
   }
  ],
