--- a/makemore/bn.ipynb
+++ b/makemore/bn.ipynb
@@ -261,6 +261,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(losses)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -291,7 +300,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "|| train | test | method"
+    "### Stats\n",
+    "|iter| train | test | method |\n",
+    "|--------|-----------| -------|---------|\n",
+    "| 1 | 2.834 | 2.4027 | --- |\n",
+    "| 2|  | | tuning output weights and bias - softmax | \n",
+    "| 3|  | | tuning log params - tanh layer saturation | \n",
+    "|4 | | | using kaiming init |\n",
+    "|5 | | | add batch norm layer |\n",
+    "| 6| | | running batch norm | "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "#fff"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| 1 | 2.834 | 2.4027 |  |\n",
+    "| 2| | | tuning bias & weights | "
    ]
   },
   {
