--- a/makemore/cnn.ipynb
+++ b/makemore/cnn.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "id": "a6316189-e853-420b-955b-76690d33f038",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#[Paper](https://arxiv.org/pdf/1609.03499.pdf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "3f178b8f-f2e1-45cf-837d-dc69c47076f6",
    "metadata": {},
    "outputs": [],
@@ -17,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "e2ba869a-3d27-4b4f-a104-4a6898a20283",
    "metadata": {},
    "outputs": [
@@ -25,7 +35,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "names:  ['macie', 'brix', 'gabbanelli', 'rylon', 'yash']\n",
+      "names:  ['tailyn', 'yehudit', 'cher', 'dalyn', 'kimoni']\n",
       "number of names:  32033\n",
       "(list of chars, count):  ('.abcdefghijklmnopqrstuvwxyz', 27)\n",
       "(max word length, min word length):  (15, 2)\n"
@@ -61,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "24bc12b2-bbff-4ff8-b728-6c756104acf8",
    "metadata": {},
    "outputs": [
@@ -69,11 +79,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "..... => m\n",
-      "....m => a\n",
-      "...ma => c\n",
-      "..mac => i\n",
-      ".maci => e\n"
+      "..... => t\n",
+      "....t => a\n",
+      "...ta => i\n",
+      "..tai => l\n",
+      ".tail => y\n",
+      "taily => n\n",
+      "ailyn => .\n",
+      "..... => y\n"
      ]
     }
    ],
@@ -109,21 +122,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "b3d507f8-98d5-4c00-89ba-0afda41614ab",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 1.6954, -1.0087,  0.4551, -1.1384, -1.7112]])"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Emmbedding:\n",
     "    def __init__(self, num_embedding, embedding_dim):\n",
